--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Yew App</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+
+    <link data-trunk rel="scss" href="app.scss">
+    <link data-trunk rel="copy-dir" href="resource"/>
+    <link rel="shortcut icon" href="resource/rustacean-flat-happy.svg">
 </head>
 </html>
